[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "offline-abci-cyclegan"
version = "0.1.0"
description = "Core implementations for CycleGAN-based offline aBCI data augmentation and WCMF meta-learning."
requires-python = ">=3.9"
dependencies = [
  "torch>=2.0",
  "numpy>=1.23",
  "scikit-learn>=1.2",
]

[tool.setuptools.packages.find]
include = ["offline_abci*"]
